# pilot_gui

./: .gitignore  LICENSE  README.md  _cam_config.json  cam_config.json  cam_config.toml  package.xml  setup.cfg  setup.py
pilot_gui/: _view_cameras.py  camtest.py  find_cameras.py  record_feed.py  switch_cameras.py  view_cameras.py
