<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilot_gui</name>
  <version>0.0.0</version>
  <description>ROVOTICS' camera viewer and pilot HUD. Part of the CORE ROV System </description>
  <maintainer email="jackdfrings@protonmail.com">Jack Frings</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>python3-toml</depend>
  <depend>python3-opencv</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>core</depend>
  <depend>rcl_interfaces</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
